src-tauri/test_output.txt
   Compiling mega-brisas v1.0.0-alpha (C:\Users\femprobrisas\proyecto-brisas\Rust\brisas-app\src-tauri)
warning: unused import: `warn`
  --> src\db\surrealdb_proveedor_queries.rs:11:18
   |
11 | use log::{debug, warn};
   |                  ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0600]: cannot apply unary operator `!` to type `impl std::future::Future<Output = bool>`
   --> src\services\surrealdb_service.rs:205:17
    |
205 |         assert!(!service.is_connected());
    |                 ^^^^^^^^^^^^^^^^^^^^^^^ cannot apply unary operator `!`

For more information about this error, try `rustc --explain E0600`.
warning: `mega-brisas` (lib test) generated 1 warning
error: could not compile `mega-brisas` (lib test) due to 1 previous error; 1 warning emitted
